tests/fixtures/typescript/expressions/spread/invalid_position/input_invalid_spread_binary.svelte
<script lang="ts">
	a + ...b;
</script>
